--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 include_directories(include)
 
 set(SOURCE_FILES examples/main.cpp include/BinarySearchTree.h source/BinarySearchTree.cpp)
-add_executable(BinarySearchTree ${SOURCE_FILES})
+add_executable(BinarySearchTree ${SOURCE_FILES} tests/size.cpp)
 
