--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 include_directories(include)
 
-set(SOURCE_FILES examples/main.cpp include/BinarySearchTree.hpp source/BinarySearchTree.cpp tests/catch.hpp tests/size.cpp tests/main.cpp)
-add_executable(BinarySearchTree ${SOURCE_FILES})
+add_library(BinarySearchTree STATIC ${CMAKE_CURRENT_SOURCE_DIR}/source/BinarySearchTree.cpp)
+
+add_executable(Examples ${CMAKE_CURRENT_SOURCE_DIR} examples/main.cpp)
 add_executable(Tests ${TESTS_SOURCE} tests/catch.hpp tests/main.cpp tests/size.cpp tests/insert.cpp tests/find.cpp)
 
